[package]
name = "monitor"
version = "0.1.0"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
heim = { version = "0.1.0-beta.3", features = ["process"] }
smol = "0.1.18"
anyhow = "1.0.31"
async-channel = "1.1.1"
ctrlc = "3.1.4"
async-dup = "1.1.0"
