[package]
name = "monitor"
version = "0.1.0"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
sysinfo = "0.29.0"
anyhow = "1.0.71"
ctrlc = "3.2.5"
